--- a/AnimalsPalace2/src/main/java/View/TelaDonos.form
+++ b/AnimalsPalace2/src/main/java/View/TelaDonos.form
@@ -56,14 +56,14 @@
         <Component class="javax.swing.JTextPane" name="FornSelecionado">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
-            <Property name="text" type="java.lang.String" value="Fornecedor Selecionado"/>
+            <Property name="text" type="java.lang.String" value="Dono Selecionado"/>
           </Properties>
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JTextField" name="ProcuraForn">
+    <Component class="javax.swing.JTextField" name="ProcuraDono">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ProcuraFornActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ProcuraDonoActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -89,11 +89,13 @@
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="6">
+              <Table columnCount="6" rowCount="6">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
                 <Column editable="false" title="Nome" type="java.lang.Object"/>
                 <Column editable="false" title="Telefone" type="java.lang.Object"/>
                 <Column editable="false" title="Email" type="java.lang.Object"/>
+                <Column editable="false" title="Nome do Pet" type="java.lang.Object"/>
+                <Column editable="true" title="RG" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="rowHeight" type="int" value="30"/>
