--- a/AnimalsPalace2/src/main/java/View/TelaFuncionarios.form
+++ b/AnimalsPalace2/src/main/java/View/TelaFuncionarios.form
@@ -56,7 +56,7 @@
         <Component class="javax.swing.JTextPane" name="FornSelecionado">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
-            <Property name="text" type="java.lang.String" value="Fornecedor Selecionado"/>
+            <Property name="text" type="java.lang.String" value="Funcion&#xe1;rio Selecionado"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -89,11 +89,14 @@
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="6">
+              <Table columnCount="7" rowCount="6">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
                 <Column editable="false" title="Nome" type="java.lang.Object"/>
                 <Column editable="false" title="Telefone" type="java.lang.Object"/>
-                <Column editable="false" title="Email" type="java.lang.Object"/>
+                <Column editable="false" title="RG" type="java.lang.Object"/>
+                <Column editable="false" title="Endere&#xe7;o" type="java.lang.Object"/>
+                <Column editable="false" title="CT" type="java.lang.Object"/>
+                <Column editable="false" title="Fun&#xe7;&#xe3;o" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="rowHeight" type="int" value="30"/>
