--- a/AnimalsPalace2/src/main/java/View/TelaPets.form
+++ b/AnimalsPalace2/src/main/java/View/TelaPets.form
@@ -50,7 +50,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextPane" name="FornSelecionado">
+        <Component class="javax.swing.JTextPane" name="PetSelecionado">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="text" type="java.lang.String" value="Pet Selecionado"/>
