--- a/AnimalsPalace2/src/main/java/View/TelaCarrinho.form
+++ b/AnimalsPalace2/src/main/java/View/TelaCarrinho.form
@@ -96,7 +96,7 @@
     <Component class="javax.swing.JLabel" name="setinha">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\setinha2.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\setinha2.png"/>
         </Property>
       </Properties>
       <Events>
@@ -112,7 +112,7 @@
       <Properties>
         <Property name="horizontalAlignment" type="int" value="2"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\botao.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\botao.png"/>
         </Property>
         <Property name="verticalAlignment" type="int" value="1"/>
       </Properties>
@@ -126,7 +126,7 @@
       <Properties>
         <Property name="horizontalAlignment" type="int" value="2"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\botao.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\botao.png"/>
         </Property>
         <Property name="verticalAlignment" type="int" value="1"/>
       </Properties>
@@ -169,7 +169,7 @@
     <Component class="javax.swing.JLabel" name="Fundo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\fundo4.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\fundo4.png"/>
         </Property>
       </Properties>
       <Constraints>
